--- a/Common.blocks/Base/Base.scss
+++ b/Common.blocks/Base/Base.scss
@@ -14,6 +14,29 @@ input {
   margin: 0px;
 }
 
+a {
+  margin: 0;
+  padding: 0;
+  outline: none;
+  text-decoration: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  text-decoration: none;
+}
+
+button {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  background: none;
+}
 /*
 h3 {
   margin: 0;
