--- a/pages/index.scss
+++ b/pages/index.scss
@@ -271,3 +271,5 @@
 @import '../Common.blocks/Pagination/-PrevNextPage/Pagination-PrevNextPage';
 @import '../Common.blocks/Pagination/-Dots/Pagination-Dots';
 @import '../Common.blocks/Pagination/-AmountObjsOnPage/Pagination-AmountObjsOnPage';
+
+@import '../Common.blocks/Wrapper/-ThirdDropdownGuests/Wrapper-ThirdDropdownGuests';
