--- a/Common.blocks/Wrapper/-ThirdDropdownGuests/Wrapper-ThirdDropdownGuests.scss
+++ b/Common.blocks/Wrapper/-ThirdDropdownGuests/Wrapper-ThirdDropdownGuests.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Wrapper-Pagination {
-    margin-bottom: 230px;
+  .Wrapper-ThirdDropdownGuests {
+    width: 320px;
+    margin-bottom: 244px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Wrapper-Pagination {
+  .Wrapper-ThirdDropdownGuests {
 
   }
 }
