--- a/Common.blocks/WidgetTitle/WidgetTitle.scss
+++ b/Common.blocks/WidgetTitle/WidgetTitle.scss
@@ -1,46 +1,42 @@
-.Container {
-  width: 100%;
-  height: 900px;
-}
-
 @media only screen and (max-width: 576px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Container {
+  .WidgetTitle {
 
   }
 }
+
