--- a/pages/index.scss
+++ b/pages/index.scss
@@ -273,3 +273,15 @@
 @import '../Common.blocks/Pagination/-AmountObjsOnPage/Pagination-AmountObjsOnPage';
 
 @import '../Common.blocks/Wrapper/-ThirdDropdownGuests/Wrapper-ThirdDropdownGuests';
+@import '../Common.blocks/Content/-WrapperForColorsAndType/Content-WrapperForColorsAndType';
+@import '../Common.blocks/Container/-Layout/Container-Layout';
+@import '../Common.blocks/WidgetTitle/WidgetTitle';
+@import '../Common.blocks/UIKitMarkup/UIKitMarkup';
+@import '../Common.blocks/ColorsAndType/ColorsAndType';
+@import '../Common.blocks/ColorsAndType/-Wrapper/ColorsAndType-Wrapper';
+@import '../Common.blocks/ColorsExamples/ColorsExamples';
+@import '../Common.blocks/ColorExample/ColorExample';
+
+@import '../Common.blocks/ColorsExamples/-Description/ColorsExamples-Description';
+@import '../Common.blocks/ColorExample/_darkShade100/ColorExample_darkShade100';
+@import '../Common.blocks/TitleInsideWidget/TitleInsideWidget';
