--- a/Common.blocks/Base/Mixins.scss
+++ b/Common.blocks/Base/Mixins.scss
@@ -19,3 +19,11 @@
   }
 }
 
+
+@mixin TitleInsideWidget {
+  font-family: Quicksand;
+  font-weight: bold;
+  font-size: 19px;
+  line-height: 24px;
+  color: $DarkShade100;
+}
