--- a/Common.blocks/Base/Variables.scss
+++ b/Common.blocks/Base/Variables.scss
@@ -9,6 +9,7 @@ $DarkShade25: rgba(31, 32, 65, 0.25);
 $DarkShade10: rgba(31, 32, 65, 0.1);
 $DarkShade05: rgba(31, 32, 65, 0.05);
 
+$bodyColor: #E5E5E5;
 $background: #FFFFFF;
 $DatepickerArrowColor: #BC9CFF;
 $DatepickerArrowColorHover: darken($DatepickerArrowColor, 10%);
