--- a/Common.blocks/ColorsExamples/-Description/ColorsExamples-Description.scss
+++ b/Common.blocks/ColorsExamples/-Description/ColorsExamples-Description.scss
@@ -1,46 +1,43 @@
-.Container {
-  width: 100%;
-  height: 900px;
-}
-
 @media only screen and (max-width: 576px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Container {
-
+  .ColorsExamples-Description {
+    padding-left: 40px;
+    padding-top: 6.8px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Container {
+  .ColorsExamples-Description {
 
   }
 }
+
