--- a/Common.blocks/ColorsExamples/ColorsExamples.scss
+++ b/Common.blocks/ColorsExamples/ColorsExamples.scss
@@ -1,46 +1,44 @@
-.Container {
-  width: 100%;
-  height: 900px;
-}
-
 @media only screen and (max-width: 576px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .Container {
-
+  .ColorsExamples {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 20px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .Container {
+  .ColorsExamples {
 
   }
 }
+
