--- a/Common.blocks/Base/Variables.scss
+++ b/Common.blocks/Base/Variables.scss
@@ -11,6 +11,7 @@ $DarkShade05: rgba(31, 32, 65, 0.05);
 
 $bodyColor: #E5E5E5;
 $background: #FFFFFF;
+$Green: #6FCF97;
 $DatepickerArrowColor: #BC9CFF;
 $DatepickerArrowColorHover: darken($DatepickerArrowColor, 10%);
 $DatepickerGradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
