--- a/Common.blocks/ColorsAndType/ColorsAndType.scss
+++ b/Common.blocks/ColorsAndType/ColorsAndType.scss
@@ -50,8 +50,7 @@
     padding-left: 150px;
     padding-top: 63px;
     padding-right: 177px;
-    width: 1400px;
-    height: 900px;
+    width: auto;
   }
 }
 
