--- a/pages/index.scss
+++ b/pages/index.scss
@@ -285,3 +285,29 @@
 @import '../Common.blocks/ColorsExamples/-Description/ColorsExamples-Description';
 @import '../Common.blocks/ColorExample/_darkShade100/ColorExample_darkShade100';
 @import '../Common.blocks/TitleInsideWidget/TitleInsideWidget';
+@import '../Common.blocks/TitleInsideWidget/_text/TitleInsideWidget_text_regular';
+@import '../Common.blocks/ColorExample/-ColorName/ColorExample-ColorName';
+@import '../Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_75';
+@import '../Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_50';
+@import '../Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_25';
+@import '../Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_05';
+@import '../Common.blocks/TitleInsideWidget/_purple/TitleInsideWidget_purple';
+@import '../Common.blocks/TitleInsideWidget/_green/TitleInsideWidget_green';
+@import '../Common.blocks/ColorExample/_green/ColorExample_green';
+@import '../Common.blocks/ColorExample/_purple/ColorExample_purple';
+@import '../Common.blocks/ColorExample/_darkened/ColorExample_darkened_05';
+@import '../Common.blocks/ColorExample/_darkened/ColorExample_darkened_25';
+@import '../Common.blocks/ColorExample/_darkened/ColorExample_darkened_50';
+@import '../Common.blocks/ColorExample/_darkened/ColorExample_darkened_75';
+@import '../Common.blocks/ColorExample/_darkened/ColorExample_darkened_100';
+@import '../Common.blocks/LabelText/LabelText';
+@import '../Common.blocks/BodyText/BodyText';
+@import '../Common.blocks/BodyText/_darkened/BodyText_darkened_25';
+@import '../Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_body';
+@import '../Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_h1';
+@import '../Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_h2';
+@import '../Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_h3';
+@import '../Common.blocks/LabelText/_text/LabelText_text_regular';
+@import '../Common.blocks/LabelText/_darkened/LabelText_darkened_25';
+@import '../Common.blocks/ExampleText/-Text/_text/ExampleText-Text_text_wrapping';
+@import '../Common.blocks/ExampleText/_direction/ExampleText_direction_top';
