--- a/Common.blocks/ColorExample/-ColorName/ColorExample-ColorName.scss
+++ b/Common.blocks/ColorExample/-ColorName/ColorExample-ColorName.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .WidgetTitle {
-    @include WidgetTitle;
+  .ColorExample-ColorName {
+    padding-top: 5px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .WidgetTitle {
+  .ColorExample-ColorName {
 
   }
 }
