--- a/Common.blocks/Container/-Layout/Container-Layout.scss
+++ b/Common.blocks/Container/-Layout/Container-Layout.scss
@@ -26,7 +26,7 @@
   .Container-Layout {
     margin-bottom: 50px;
     background: $background;
-    padding-bottom: 145px;
+    height: 900px;
   }
 }
 
