--- a/Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_h2.scss
+++ b/Common.blocks/ExampleText/-Header/_fontSize/ExampleText-Header_fontSize_h2.scss
@@ -1,41 +1,42 @@
 @media only screen and (max-width: 576px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .WidgetTitle {
-    @include WidgetTitle;
+  .ExampleText-Header_fontSize_h2 {
+    font-size: 19px;
+    line-height: 23px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .WidgetTitle {
+  .ExampleText-Header_fontSize_h2 {
 
   }
 }
