--- a/Common.blocks/ExampleText/_direction/ExampleText_direction_top.scss
+++ b/Common.blocks/ExampleText/_direction/ExampleText_direction_top.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .WidgetTitle {
-    @include WidgetTitle;
+  .ExampleText_direction_top {
+    margin-top: -2px;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .WidgetTitle {
+  .ExampleText_direction_top {
 
   }
 }
