--- a/Common.blocks/LabelText/_text/LabelText_text_regular.scss
+++ b/Common.blocks/LabelText/_text/LabelText_text_regular.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .WidgetTitle {
-    @include WidgetTitle;
+  .LabelText_text_regular {
+    font-weight: normal;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .WidgetTitle {
+  .LabelText_text_regular {
 
   }
 }
