--- a/Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_05.scss
+++ b/Common.blocks/TitleInsideWidget/_darkened/TitleInsideWidget_darkened_05.scss
@@ -1,41 +1,41 @@
 @media only screen and (max-width: 576px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
-  .WidgetTitle {
-    @include WidgetTitle;
+  .TitleInsideWidget_darkened_05 {
+    background: $DarkShade05;
   }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
-  .WidgetTitle {
+  .TitleInsideWidget_darkened_05 {
 
   }
 }
